Tests for MDEV-18892 Regression in slow log and admin statements

The patch for MDEV-15945 fixed MDEV-18892. Adding tests only.